--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/schema": "^8.3.10",
     "apollo-server": "^3.6.7",
     "apollo-server-core": "^3.6.7",
     "apollo-server-express": "^3.6.7",
@@ -18,9 +19,12 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "graphql": "^16.4.0",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.8.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.19.0",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "ws": "^8.6.0"
   }
 }
