--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "graphql": "^16.4.0",
+    "graphql-ws": "^5.8.1",
     "jwt-decode": "^3.1.2",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
